# concore2full

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: _test_common.sh  ci.yml  test-clang-format.sh  test-clang.sh  test-gcc-asan.sh  test-gcc.sh  test-package.sh  test-static-checks.sh
include/: async_oper_state.h  global_thread_pool.h  thread_pool.h
include/concore2full/: async_oper_state.h  bulk_spawn.h  concore2full.h  future.h  global_thread_pool.h  profiling.h  profiling_atomic.h  spawn.h  suspend.h  sync_execute.h  this_thread.h  thread_control_helper.h  thread_pool.h  thread_reclaimer.h  thread_snapshot.h
include/concore2full/c/: bulk_spawn.h  spawn.h  task.h  thread_suspension.h  thread_switch.h
include/concore2full/detail/: atomic_wait.h  atomic_wrapper.h  bulk_spawn_frame_base.h  bulk_spawn_frame_full.h  callcc.h  catomic.h  context_function.h  copyable_spawn_frame_base.h  core_types.h  create_stackfull_coroutine.h  frame_holder.h  frame_with_value.h  profiling.h  raw_delete.h  shared_frame.h  sleep_helper.h  spawn_frame_base.h  stack_control_structure.h  task.h  task_base.h  task_queue.h  thread_suspension.h  thread_switch_helper.h  unique_frame.h  value_holder.h
include/concore2full/stack/: simple_stack_allocator.h  stack_allocator.h
include/detail/: callcc.h  context_function.h  continuation.h  core_types.h  create_stackfull_coroutine.h  profiling.h  simple_stack_allocator.h  stack_allocator.h  stack_control_structure.h
include/stack/: simple_stack_allocator.h  stack_allocator.h
src/: CMakeLists.txt  bulk_spawn.cpp  bulk_spawn_frame_base.cpp  concore2full.cpp  concore2full.h  copyable_spawn_frame_base.cpp  profiling.cpp  sleep_helper.cpp  spawn.cpp  spawn_frame_base.cpp  suspend.cpp  this_thread.cpp  thread_control_helper.cpp  thread_info.cpp  thread_info.h  thread_pool.cpp  thread_snapshot.cpp  thread_suspension.cpp  thread_switch.cpp
test/: CMakeLists.txt  example_async_io.cpp  example_conc_sort.cpp  example_mandelbrot.cpp  example_skynet.cpp  sketch_cancellation.cpp  sketch_split.cpp  test_bulk_spawn.cpp  test_callcc.cpp  test_simple_example.cpp  test_smoke.cpp  test_spawn.cpp  test_stack_allocator.cpp  test_suspend.cpp  test_sync_execute.cpp  test_thread_pool.cpp  tests_c.cpp
test/c/: test_bulk_spawn.c  test_spawn.c
test_package/: CMakeLists.txt  conanfile.py  example.cpp
test_package/src/: example.cpp
